fixed z-index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -364,6 +364,7 @@ p.about-info-p2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 .info-imgs-2 {
     height: 36%;
